--- a/ng-housing/src/app/property/property-card/property-card.component.html
+++ b/ng-housing/src/app/property/property-card/property-card.component.html
@@ -1,12 +1,8 @@
-<div class="row">
-  <div class="shadow-lg col-sm-4 p-3">
-    <div class="card">
-      <img class="propImg" src="assets/images/house-default.png" >
-      <div class="card-body">
-        <h1>{{Property.Name}}</h1>
-      <h1>{{Property.Type}}</h1>
-      <h1>{{Property.Price}}</h1>
-      </div>
-    </div>
+<div class="card">
+  <img class="propImg" src="assets/images/house-default.png" >
+  <div class="card-body">
+    <h1>{{property.Name}}</h1>
+    <h1>{{property.Type}}</h1>
+    <h1>{{property.Price}}</h1>
   </div>
 </div>
