--- a/ng-housing/src/app/property/property-card/property-card.component.html
+++ b/ng-housing/src/app/property/property-card/property-card.component.html
@@ -1,5 +1,15 @@
 <div class="card">
-  <img class="propImg" src="assets/images/house-default.png" >
+  <div class="card-img-wrapper">
+    <img class="card-img-top" src="assets/images/house-default.png" >
+    <ul class="list-inline text-center member-icons animate">
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fas fa-pen"></i></button>
+      </li>
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fas fa-address-card"></i></button>
+      </li>
+    </ul>
+  </div>
   <div class="card-body">
     <h1>{{property.Name}}</h1>
     <h1>{{property.Type}}</h1>
