--- a/ng-housing/src/app/property/property-card/property-card.component.html
+++ b/ng-housing/src/app/property/property-card/property-card.component.html
@@ -3,7 +3,7 @@
     <img class="card-img-top" src="assets/images/house-default.png" >
     <ul class="list-inline text-center member-icons animate">
       <li class="list-inline-item">
-        <button class="btn btn-primary"><i class="fas fa-pen"></i></button>
+        <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="fas fa-pen"></i></button>
       </li>
       <li class="list-inline-item">
         <button class="btn btn-primary"><i class="fas fa-address-card"></i></button>
