--- a/ng-housing/src/app/user/user-register/user-register.component.html
+++ b/ng-housing/src/app/user/user-register/user-register.component.html
@@ -9,7 +9,7 @@
         <div class="form-group col-12">
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control" formControlName="userName">
-            <span *ngIf="!userName.valid && userName.touched"
+            <span *ngIf="!userName.valid && (userName.touched || userSubmitted )"
             class="error-block">
             name field is required
           </span>
@@ -18,7 +18,7 @@
         <div class="form-group col-12">
           <label for="email" class="form-label">Email</label>
           <input type="text" class="form-control" formControlName="email">
-          <span *ngIf="!email.valid && email.touched" class="error-block">
+          <span *ngIf="!email.valid && (email.touched || userSubmitted )" class="error-block">
             <span *ngIf="email.hasError('required')">
               email field is required
             </span>
@@ -31,7 +31,7 @@
         <div class="form-group col-12">
           <label for="passwrod" class="form-label">Password</label>
           <input type="password" class="form-control" formControlName="password">
-          <span *ngIf="!password.valid && password.touched" class="error-block">
+          <span *ngIf="!password.valid && (password.touched || userSubmitted )" class="error-block">
             <span *ngIf="password.errors['required']">
               Password field is required
             </span>
@@ -44,7 +44,7 @@
         <div class="form-group col-12">
           <label for="cpassword" class="form-label">Confirm Password</label>
           <input type="password" class="form-control" formControlName="confirmPassword">
-          <span *ngIf="!confirmPassword.valid && confirmPassword.touched" class="error-block">
+          <span *ngIf="!confirmPassword.valid && (confirmPassword.touched || userSubmitted )" class="error-block">
             <span *ngIf="confirmPassword.hasError('required')">
               Confirm Password field is required
             </span>
@@ -57,7 +57,7 @@
         <div class="form-group col-12">
           <label for="mobile" class="form-label">Mobile</label>
           <input type="text" class="form-control" formControlName="mobile">
-          <span *ngIf="!mobile.valid && mobile.touched" class="error-block">
+          <span *ngIf="!mobile.valid && (mobile.touched || userSubmitted )" class="error-block">
             <span *ngIf="mobile.errors['required']">
               Mobile field is required
             </span>
@@ -71,9 +71,6 @@
           <button type="submit" class="btn btn-primary">Save</button>
           <button type="reset" class="btn btn-secondary ml-2">Cancel</button>
         </div>
-        Form Values: {{registrationForm.value | json}}
-        <br/>
-        Form Status: {{registrationForm.valid | json}}
       </form>
     </div>
   </div>
