--- a/ng-housing/src/app/property/property-card/property-card.component.html
+++ b/ng-housing/src/app/property/property-card/property-card.component.html
@@ -2,7 +2,7 @@
   <div class="card-img-wrapper">
     <img *ngIf="property.Image" class="card-img-top" src="assets/images/{{property.Image}}.png" >
     <img *ngIf="!property.Image" class="card-img-top" src="assets/images/house-default.png" >
-    <ul class="list-inline text-center member-icons animate">
+    <ul *ngIf="!hideIcons" class="list-inline text-center member-icons animate">
       <li class="list-inline-item">
         <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="fas fa-pen"></i></button>
       </li>
