--- a/ng-housing/src/app/property/add-property/add-property.component.html
+++ b/ng-housing/src/app/property/add-property/add-property.component.html
@@ -8,97 +8,118 @@
         <form (ngSubmit)='onSubmit()' #Form="ngForm">
           <div class="tab-panel">
             <tabset class="member-tabset" #formTabs>
-              <tab heading="Basic Info">
-                <div class="form-group col-12">
-                  <p>I want to </p>
-                  <div class="btn-group" btnRadioGroup>
-                    <label class="btn btn-outline-primary mr-2" btnRadio=1 role="button" name="SellRent">Sell</label>
-                    <label class="btn btn-outline-primary" btnRadio=2 role="button" name="SellRent">Buy</label>
+              <tab heading="Basic Info" ngModelGroup="BasicInfo" #BasicInfo="ngModelGroup">
+                  <div class="form-group col-12">
+                  <p>I want to</p>
+                    <div class="btn-group" btnRadioGroup ngModel name="SellRent" required>
+                      <label class="btn btn-outline-primary mr-2"
+                      btnRadio=1 tabindex="0" role="button" name="SellRent">Sell</label>
+                      <label class="btn btn-outline-primary"
+                      btnRadio=2  tabindex="0" role="button" name="SellRent">Rent</label>
+                    </div>
                   </div>
-                </div>
 
-                <div class="form-group col-12">
-                  <p>BHK</p>
-                  <div class="btn-group" btnRadioGroup>
-                    <label *ngFor="let bhk of [1,2,3,4]" class="btn btn-outline-primary mr-2"
-                          [btnRadio]="bhk" tabindex="0" role="button" name="BHK">{{bhk}}</label>
+                  <div class="form-group col-12">
+                    <p>BHK</p>
+                      <div class="btn-group" btnRadioGroup
+                      [(ngModel)]="propertyView.BHK" name="BHK">
+                        <label
+                        *ngFor="let bhk of [1,2,3,4]"
+                        class="btn btn-outline-primary mr-2"
+                        [btnRadio]="bhk" tabindex="0" role="button" name="BHK">{{bhk}}</label>
+                      </div>
+                    </div>
+
+
+                    <div class="form-group col-12">
+                      <p>Property Type</p>
+                        <div class="btn-group" btnRadioGroup name='propType'
+                        [(ngModel)]="propertyView.PType">
+                          <label
+                          *ngFor="let ptype of propertyTypes"
+                          class="btn btn-outline-primary mr-2"
+                          [btnRadio]="ptype" tabindex="0" role="button"
+                          name="PropType">{{ptype}}
+                        </label>
+                        </div>
+                      </div>
+
+                      <div class="form-group col-12">
+                        <p>Furnishing Type</p>
+                          <div class="btn-group" btnRadioGroup
+                          [(ngModel)]="propertyView.FType" name="FType">
+                            <label
+                            *ngFor="let ftype of furnishTypes"
+                            class="btn btn-outline-primary mr-2"
+                            [btnRadio]="ftype" tabindex="0" role="button" name="FurnishType">{{ftype}}</label>
+                          </div>
+                        </div>
+
+                    <div class="form-group col-12">
+                    <label>in Building/Society/Project</label>
+                    <input type="text" class="form-control"
+                    #propName="ngModel"
+                    ngModel name="Name"
+                    required
+                    minlength="5"
+                    [(ngModel)]="propertyView.Name"
+                    >
+                    <span *ngIf="!propName.valid && propName.touched" class="error-block">
+                      <span *ngIf="propName.errors.required">Please provide name</span>
+                      <span *ngIf="propName.errors.minlength">Name must be atleast 5 char long</span>
+                    </span>
                   </div>
-                </div>
 
-                <div class="form-group col-12">
-                  <p>Property Type</p>
-                  <div class="btn-group" btnRadioGroup name='propType' [(ngModel)]="propertyView.Type">
-                    <label *ngFor="let pt of propertyTypes" class="btn btn-outline-primary mr-2"
-                          [btnRadio]="pt" tabindex="0" role="button">{{pt}}</label>
+                  <div class="form-group col-12">
+                    <label>City</label>
+                    <input type="text"
+                    class="form-control"
+                    [(ngModel)]="propertyView.City"
+                    name="City">
                   </div>
-                </div>
 
-                <div class="form-group col-12">
-                  <p>Furnishing Type</p>
-                  <div class="btn-group" btnRadioGroup>
-                    <label *ngFor="let ft of furnishTypes" class="btn btn-outline-primary mr-2"
-                          [btnRadio]="ft" tabindex="0" role="button">{{ft}}</label>
+                  <div class="form-group col-12">
+                      <button type="button" class="btn btn-primary btn-block"
+                      (click)="selectTab(1)" [disabled]="!BasicInfo.valid">Next</button>
                   </div>
-                </div>
+              </tab>
 
-                <div class="form-group col-12">
-                  <label>in Building/Society/Project</label>
-                  <input type="text" class="form-control"
-                  #propName="ngModel"
-                  ngModel name="Name"
-                  required
-                  minlength="5"
-                  [(ngModel)]="propertyView.Name">
-                  <span *ngIf="!propName.valid && propName.touched" class="error-block">
-                    <span *ngIf="propName.errors.required">Please provide name</span>
-                    <span *ngIf="propName.errors.minlength">Name must be atleast 5 char long</span>
-                  </span>
-                </div>
+              <tab heading="Pricing and Area">
+                  <div class="form-group col-12">
+                    <label>Price (in USD)</label>
+                    <input type="text" class="form-control" name="price"
+                    [(ngModel)]="propertyView.Price">
+                  </div>
 
-                <div class="form-group col-12">
-                  <label>City</label>
-                  <input type="text" class="form-control" ngModel name="City">
-                </div>
+                  <div class="form-group col-12">
+                    <label>Security (in USD)</label>
+                    <input type="text" class="form-control">
+                  </div>
 
-                <div class="form-group col-12">
+                  <div class="form-group col-12">
+                    <label>Maintenance (in USD)</label>
+                    <input type="text" class="form-control">
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Built Area (in Sqr Feet)</label>
+                    <input type="text"
+                    class="form-control"
+                    [(ngModel)]="propertyView.BuiltArea" name="BuiltArea">
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Carpet Area(in Sqr Feet)</label>
+                    <input type="text" class="form-control">
+                  </div>
+
+                  <div class="form-group col-12">
                     <button type="button" class="btn btn-primary btn-block"
-                    (click)="selectTab(1)">Next</button>
-                </div>
-            </tab>
+                    (click)="selectTab(2)">Next</button>
 
-            <tab heading="Pricing and Area">
-                <div class="form-group col-12">
-                  <label>Price (in USD)</label>
-                  <input type="text" class="form-control" name="price" [(ngModel)]="propertyView.Price">
-                </div>
-
-                <div class="form-group col-12">
-                  <label>Security (in USD)</label>
-                  <input type="text" class="form-control">
-                </div>
-
-                <div class="form-group col-12">
-                  <label>Maintenance (in USD)</label>
-                  <input type="text" class="form-control">
-                </div>
-
-                <div class="form-group col-12">
-                  <label>Built Area (in Sqr Feet)</label>
-                  <input type="text" class="form-control">
-                </div>
-
-                <div class="form-group col-12">
-                  <label>Carpet Area(in Sqr Feet)</label>
-                  <input type="text" class="form-control">
-                </div>
-
-                <div class="form-group col-12">
-                  <button type="button" class="btn btn-primary btn-block"
-                  (click)="selectTab(2)">Next</button>
-
-                  <button type="button" class="btn btn-primary btn-block"
-                  (click)="selectTab(0)">Back</button>
-                </div>
+                    <button type="button" class="btn btn-primary btn-block"
+                    (click)="selectTab(0)">Back</button>
+                  </div>
               </tab>
 
               <tab heading="Address">
@@ -134,27 +155,32 @@
 
               <tab heading="Other Details">
                 <div class="form-group col-12">
-                  <label>Ready to Move</label><br/>
-                  <input type="radio" id='Yes' value='1' name="RTM">
-                  <label class="m-2">Yes</label>
-
-                  <input type="radio" id="No" value='2' name="RTM">
-                  <label class="m-2">No</label>
+                  <p>Ready to Move</p>
+                  <div class="btn-group" btnRadioGroup>
+                    <label class="btn btn-outline-primary mr-2"
+                    btnRadio=1 tabindex="0" role="button" name="RTM">Yes</label>
+                    <label class="btn btn-outline-primary"
+                    btnRadio=2  tabindex="0" role="button" name="RTM">No</label>
+                  </div>
                 </div>
+
 
                 <div class="form-group col-3">
                   <label>Possession/Avaialble From</label>
                   <input type="text"
-                    placeholder="Datepicker"
-                    class="form-control"
-                    bsDatepicker [bsConfig]="{containerClass: 'theme-dark-blue', dateInputFormat: 'DD-MM-YYYY'}">
+                  class="form-control"
+                  bsDatepicker
+                  [bsConfig]="{containerClass: 'theme-dark-blue', dateInputFormat: 'DD-MM-YYYY'}">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Age of Property</label>
+                  <input type="text" class="form-control">
                 </div>
 
                 <div class="form-group col-12">
                   <p>Gated Community</p>
-                  <div class="btn-group"
-                  btnRadioGroup
-                  formControlName="Gated">
+                  <div class="btn-group" btnRadioGroup>
                     <label class="btn btn-outline-primary mr-2"
                     btnRadio=1 tabindex="0" role="button" name="Gated">Yes</label>
                     <label class="btn btn-outline-primary"
@@ -163,9 +189,8 @@
                 </div>
 
                 <div class="form-group col-12">
-                  <p>Main Entrance</p>
-                  <div class="btn-group" btnRadioGroup
-                  formControlName="MainEntrance">
+                  <p>Ready to Move</p>
+                  <div class="btn-group" btnRadioGroup>
                     <label class="btn btn-outline-primary mr-2"
                     btnRadio=1 tabindex="0" role="button" name="Entrance">East</label>
                     <label class="btn btn-outline-primary"
@@ -201,22 +226,22 @@
                 <div class="form-group col-12">
                   <button type="button" class="btn btn-primary btn-block"
                   (click)="selectTab(3)">Back</button>
-                  <button type="reset" class="btn btn-primary btn-block">Cancel</button>
                   <button type="submit" class="btn btn-primary btn-block">Save</button>
+                  <button type="reset" class="btn btn-primary btn-block">Cancel</button>
                 </div>
               </tab>
             </tabset>
           </div>
         </form>
       </div>
-    </div>
+  </div>
   </div>
   <div class="col-4">
     <div class="card-header">
-      <h3>Your Property Priview</h3>
+      <h3>Your Property Preview</h3>
     </div>
-      <div class="shadow-lg p-3 bg-white">
-        <app-property-card [property]="propertyView" hideIcons="true"></app-property-card>
-      </div>
+    <div class="shadow-lg p-3 bg-white">
+      <app-property-card [property]="propertyView" hideIcons="true"></app-property-card>
+    </div>
   </div>
 </div>
