--- a/ng-housing/src/app/property/property-card/property-card.component.html
+++ b/ng-housing/src/app/property/property-card/property-card.component.html
@@ -1,19 +1,30 @@
 <div class="card">
   <div class="card-img-wrapper">
-    <img *ngIf="property.Image" class="card-img-top" src="assets/images/{{property.Image}}.png" >
-    <img *ngIf="!property.Image" class="card-img-top" src="assets/images/house-default.png" >
+    <img *ngIf="property.Image" class="card-img-top" src="assets/images/{{property.Image}}.png">
+    <img *ngIf="!property.Image" class="card-img-top" src="assets/images/house-default.png">
     <ul *ngIf="!hideIcons" class="list-inline text-center member-icons animate">
       <li class="list-inline-item">
-        <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="fas fa-pen"></i></button>
+        <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="far fa-edit"></i></button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary"><i class="fas fa-address-card"></i></button>
+        <button class="btn btn-primary"><i class="far fa-address-book"></i></button>
       </li>
     </ul>
+
   </div>
-  <div class="card-body">
-    <h1>{{property.Name}}</h1>
-    <h1>{{property.Type}}</h1>
-    <h1>{{property.Price}}</h1>
+  <div class="card-body p-1">
+    <h1 class="mb-0"> {{property.BHK}} BHK {{property.PType}} </h1>
+
+    in {{property.Name}}
+    <span *ngIf="property.Name">,</span>
+    {{property.City}}
+
+    <h6  class="mt-2">{{property.FType}}
+    <span *ngIf="property.FType !== 'Unfurnished'">Furnished</span> | Ready to Move</h6>
+
+    <hr class="mt-0 mb-2">
+
+    <h6 class="mb-0">Price: <span class>{{property.Price}} USD.</span> |
+      Area:  <span>{{property.BuiltArea}} Sq Ft </span> </h6>
   </div>
 </div>
