route resolver, image gallery added

--- a/ng-housing/src/app/property/add-property/add-property.component.html
+++ b/ng-housing/src/app/property/add-property/add-property.component.html
@@ -161,7 +161,7 @@
                     (click)="selectTab(2, PriceInfo.valid)">Next</button>
 
                     <button type="button" class="btn btn-primary btn-block"
-                    (click)="selectTab(0, PriceInfo.valid)">Back</button>
+                    (click)="selectTab(0, true)">Back</button>
                   </div>
               </tab>
 
@@ -204,7 +204,7 @@
                   (click)="selectTab(3, AddressInfo.valid)">Next</button>
 
                   <button type="button" class="btn btn-primary btn-block"
-                  (click)="selectTab(1, AddressInfo.valid)">Back</button>
+                  (click)="selectTab(1, true)">Back</button>
                 </div>
               </tab>
 
@@ -288,7 +288,7 @@
                     (click)="selectTab(4, OtherInfo.valid)">Next</button>
 
                     <button type="button" class="btn btn-primary btn-block"
-                    (click)="selectTab(2, OtherInfo.valid)">Back</button>
+                    (click)="selectTab(2, true)">Back</button>
                 </div>
               </tab>
 
