some minor ng change, n fixed middleware callling

--- a/ng-housing/src/app/property/add-property/add-property.component.html
+++ b/ng-housing/src/app/property/add-property/add-property.component.html
@@ -95,7 +95,7 @@
                   [(ngModel)]="propertyView.City">
                   <option value="">-- Select City --</option>
                   <option *ngFor="let city of cityList"
-                  value={{city.id}}>
+                  value={{city.name}}>
                     {{city.name}}
                   </option>
                   </select>
